--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -4,8 +4,7 @@
     box-sizing: content-box;
 }
 
-@media screen and (min-width: 768px) 
- {  
+
     
 header {
     display: flex;
@@ -109,109 +108,43 @@ main {
     
 }
 
-} 
 
-@media screen and (max-width: 767px) 
-
+@media screen and (max-width: 760px) 
 {
     header {
-        display: flex;
         flex-direction: column;
-        background-color: rgb(204, 200, 200);
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100px;
-        font-size: xx-large;
-        font-weight: bold;
+    
     }
     
     main {
-        width: 100%
+        flex-direction: column;
     }
-    
     
     .info {
-        display: flex;
-        width: 100%;
-        height: 600px;
-        background-color: bisque;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        font-weight: bold;
-    }
-    
-    .main_part {
-        display: flex;
-        justify-content: center;
-        font-size: x-large;
-      
+      width: 100%;
+     
     }
 
-    .part {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        background-color: rgb(252, 223, 146);
+    .main_part {
         width: 100%;
-        height: 120px;
+        margin-top: 20px;
+        margin-left: 0px;
+        margin-right: 0px;
+        margin-bottom: 0px;
         justify-content: center;
-        align-items: center;
-        font-size: large;
-        
     }
-    
-    .part_big {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        background-color: rgb(252, 223, 146);
+
+      .aside {
         width: 100%;
-        height: 120px;
-        justify-content: center;
-        align-items: center; 
-        font-size: large;
-        
     }
-    
-    .aside {
-        display: flex;
-        background-color: rgb(218, 245, 214);
-        justify-content: center;
-        align-self: flex-start;
-        width: 100%;
-        height: 600px;
-        font-size: x-large;
-        font-weight: bold;
-        
-       
-    }
-    
-    .main_aside {
-        display: flex;
-        margin-top: 30px;
-        
-    }
-    
+
     .bottom {
-        display: flex;
         flex-direction: column;
-        background-color: rgb(177, 175, 175);
-        justify-content: space-around; 
-      
+   
     }
+
     .section {
-        display: flex;
-        background-color: azure;
-        justify-content: center;
-        align-content: center;
-        flex-wrap: wrap;
-        width: 100%;
-        height: 80px;
-        font-size: large;
-        font-weight: bold;
-        
+    width: 100%;
     }
 
 }
